# twitter_clone

./: .env  Cargo.toml
migrations/00000000000000_diesel_initial_setup/: up.sql
src/: constants.rs  like.rs  main.rs  tweet.rs
