[package]
name = "api"
version = "0.1.0"
edition = "2018"
authors = ["Rodolfo Ruiz<rodolfo@cryptograpi.com>", "Cryptograpi Team<support@cryptograpi.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-rt = "1"
actix-web = "2"
bson = "2.0.0-beta.3"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
mongodb = "2.0.0-beta.3"
serde = "1.0"
serde_json = "1.0"

