[package]
name = "api"
version = "0.1.0"
edition = "2018"
authors = ["Rodolfo Ruiz<rodolfo@cryptograpi.com>", "Cryptograpi Team<support@cryptograpi.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.9"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }