[package]
name = "api"
version = "0.1.0"
edition = "2018"
authors = ["Rodolfo Ruiz<rodolfo@cryptograpi.com>", "Cryptograpi Team<support@cryptograpi.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = "1.0.127"
serde_json = "1.0.66"
uuid = { version = "0.6", features = ["serde", "v4"] }